; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_stream.c_write_handler_checksum.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_stream.c_write_handler_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.checksum_stream_baton = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i64*)* @write_handler_checksum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @write_handler_checksum(i8* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca %struct.checksum_stream_baton*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64* %2, i64** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.checksum_stream_baton*
  store %struct.checksum_stream_baton* %9, %struct.checksum_stream_baton** %7, align 8
  %10 = load %struct.checksum_stream_baton*, %struct.checksum_stream_baton** %7, align 8
  %11 = getelementptr inbounds %struct.checksum_stream_baton, %struct.checksum_stream_baton* %10, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %27

14:                                               ; preds = %3
  %15 = load i64*, i64** %6, align 8
  %16 = load i64, i64* %15, align 8
  %17 = icmp sgt i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %14
  %19 = load %struct.checksum_stream_baton*, %struct.checksum_stream_baton** %7, align 8
  %20 = getelementptr inbounds %struct.checksum_stream_baton, %struct.checksum_stream_baton* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = load i64*, i64** %6, align 8
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @svn_checksum_update(i32 %21, i8* %22, i64 %24)
  %26 = call i32 @SVN_ERR(i32 %25)
  br label %27

27:                                               ; preds = %18, %14, %3
  %28 = load %struct.checksum_stream_baton*, %struct.checksum_stream_baton** %7, align 8
  %29 = getelementptr inbounds %struct.checksum_stream_baton, %struct.checksum_stream_baton* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load i8*, i8** %5, align 8
  %32 = load i64*, i64** %6, align 8
  %33 = call i32 @svn_stream_write(i32 %30, i8* %31, i64* %32)
  %34 = call i32* @svn_error_trace(i32 %33)
  ret i32* %34
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_checksum_update(i32, i8*, i64) #1

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_stream_write(i32, i8*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
